--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,9 +2,10 @@
   padding: 1rem;
   display: flex;
   justify-content: flex-start;
-  background-image: url("../../assets/images/owl-background.jpg");
+  background-image: url("../../assets/images/dogesad.png");
   background-size: cover;
-  height: 80vh;
+  height: 104vh;
+  width: 79rem;
   &__title {
     color: #494949;
   }
